# tune-prism

./: .gitignore  .prettierrc  LICENSE  README.md  build.sh  flake.nix  get_models.sh  package-lock.json  package.json
nix/: torch-bin.nix
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  util.rs
src-tauri/src/data/: fsio.rs  mod.rs
src-tauri/src/demucs/: audio.rs  error.rs  mod.rs  model.rs
src-tauri/src/routes/: mod.rs  project.rs  split.rs
src/components/auth/: Auth.tsx
src/components/payments/: PaymentDrawer.tsx
src/components/project/: TrackDetails.tsx  project.tsx
src/components/search/: SongSearch.tsx
src/components/sidebar/: Sidebar.tsx
src/functions/: auth.ts  payment.ts  project.ts  split.ts
src/store/project/: index.ts  types.d.ts
src/store/ui/: index.ts  types.d.ts
src/store/user/: index.ts  types.d.ts
src/util/: misc.ts  project.ts
