[package]
name = "stem_split"
version = "0.0.0"
description = "Stem splitter"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
dasp = { version = "0.11.0", features = ["all"] }
fraction = "0.15.1"
hound = "3.5.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
polodb_core = "4.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8.0"
reqwest = { version = "0.11.24", features = ["json"] }
axum = { version = "0.7.4", features = ["macros"] }
oauth2 = "4.4.2"
tokio = "1.36.0"
open = "5.0.1"
kv = "0.24.0"
symphonia = { version = "0.5.3", features = ["all"] }
tauri = { version = "1.5", features = [ "path-all", "fs-all", "protocol-all", "shell-open"] }
tch = "0.15"
once_cell = "1.19.0"
ndarray = "0.15.6"
rayon = "1.8.1"
id3 = "1.12.0"
mime = "0.3.17"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tauri-plugin-drag = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[profile.release]
strip = "symbols"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

